log
Wed Oct 21 19:40:51 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:28:18: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
     pq->capac = (pc->capac) * 2 + 1;
                  ^~
                  pq
heap.c:28:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Wed Oct 21 19:41:02 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:28:18: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
     pq->capac = (pc->capac) * 2 + 1;
                  ^~
                  pq
heap.c:28:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Wed Oct 21 19:41:09 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
1e8ec96
Thu Oct 22 23:08:20 UTC 2020: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
066a4a1
Thu Oct 22 23:11:08 UTC 2020: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 25/70
a0482ea
Thu Oct 22 23:11:48 UTC 2020: 
 heap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 25/70
c489f7e
Thu Oct 22 23:13:11 UTC 2020: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 25/70
65fb021
Thu Oct 22 23:14:50 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
b3a5e82
